--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,13 @@ modern.jsonp
 resources/sass/.sass-cache/
 resources/.arch-internal-preview.css
 .arch-internal-preview.css
+# Dépendances Node
+node_modules/
+
+# Fichiers système et IDE (exemples)
+.DS_Store
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.vscode/
+*.env
